css/styles.css
:root {
  --branding-color: #407088;
  --secondary-color: #eaf6f6;
  --heading-font-family: "Playfair Display", serif;
  --default-font-family: "Poppins", sans-serif;
}

body {
  font-family: var(--default-font-family);
}

h1,
h2,
h3 {
  color: black;
  font-family: var(--heading-font-family);
}

h1 {
  font-size: 96px;
  font-weight: bold;
}

h2 {
  font-size: 52px;
}

h3 {
  text-align: center;
}

p {
  font-size: 16px;
  line-height: 30px;
  text-align: center;
}

img {
  border-radius: 10px;
}

.nav-item {
  padding: 0 15px;
}

.navbar-light .navbar-nav .nav-link.active {
  color: var(--branding-color);
}

.collapse.navbar-collapse {
  justify-content: end;
}

.homepage-hero {
  background-color: var(--secondary-color);
  text-align: center;
  padding: 250px 20px 170px 20px;
}

.homepage-hero h2 {
  font-family: var(--default-font-family);
  line-height: 2;
  color: #272142;
  font-size: 24px;
  padding: 30px;
  font-weight: normal;
}

.content-container {
  padding: 160px 20px;
}

.content {
  margin-right: 30px;
}

.content img {
  display: block;
  margin: 0 auto;
}

.content h1 {
  font-size: 64px;
  line-height: 80px;
}

.content h2 {
  font: var(--default-font-family);
  font-weight: bold;
  font-size: 18px;
}

.content h3 {
  font: var(--default-font-family);
  font-size: 24px;
  line-height: 1.5;
  margin: 20px 0 0;
}

.content p {
  font-weight: 200px;
  font-size: 14px;
}

.content img {
  max-width: 80%;
}

.btn-branding {
  background: var(--branding-color);
  border-radius: 4px;
  color: white;
  font-size: 16px;
  line-height: 27px;
  padding: 15px 30px;
}

.btn-branding-outline {
  background: white;
  border: 1px solid var(--branding-color);
  border-radius: 4px;
  color: var(--branding-color);
  font-size: 16px;
  line-height: 27px;
  padding: 15px 30px;
}

.project-img {
  border-radius: 4px;
}

.project-description {
  padding: 100px 60px;
}

.logo {
  max-height: 70px;
}

footer {
  margin: 60px 0;
}

footer h3 {
  font-size: 48px;
  text-align: left;
}

footer .contact-box p {
  margin: 0;
  text-align: left;
}

footer .contact-box {
  background: var(--secondary-color);
  padding: 45px 100px;
  border-radius: 10px;
}

.contact-links a {
  text-decoration: none;
  color: rgba(0, 0, 0, 0.7);
  font-size: 16px;
}

.contact-links a:hover {
  color: var(--branding-color);
}

footer .btn {
  margin-top: 20px;
}

footer .email-link {
  text-decoration: none;
  color: rgba(0, 0, 0, 0.7);
  font-size: 22px;
  margin: 50px;
}

footer .email-link:hover {
  color: var(--branding-color);
}

footer .social-links a {
  margin: 0 20px;
  color: var(--branding-color);
  background-color: var(--secondary-color);
  padding: 10px 15px;
  font-size: 20px;
  text-decoration: none;
  border-radius: 50%;
  transition: all 100ms ease-in-out;
}

footer .social-links a:hover {
  color: white;
  background-color: var(--branding-color);
}

@media (max-width: 1000px) {
  h1 {
    font-size: 48px;
    line-height: 56px;
  }

  h2 {
    font-size: 40px;
  }

  .homepage-hero {
    padding: 150px 20px 100px;
  }

  .homepage-hero h2 {
    line-height: 1.5;
  }

  .content {
    text-align: center;
    padding: 0;
    grid-column: auto;
  }

  .content h1 {
    font-size: 48px;
    line-height: 56px;
  }

  .content-container .btn {
    margin-bottom: 20px;
  }

  .project-description {
    padding: 0;
    text-align: center;
  }

  footer .contact-box {
    padding: 30px;
  }

  footer .contact-box h3 {
    font-size: 30px;
    text-align: center;
  }

  footer .contact-box p {
    text-align: center;
  }

  footer .contact-box .btn {
    font-size: 12px;
    padding: 20px 5px;
  }

  footer .email-link {
    font-size: 18px;
  }
}

